add setting search funtion

--- a/tests/res.qrc
+++ b/tests/res.qrc
@@ -7,5 +7,7 @@
     </qresource>
     <qresource prefix="/">
         <file>search.png</file>
+        <file>assets/search.conf</file>
+        <file>assets/search.xml</file>
     </qresource>
 </RCC>
